--- a/illustratr/style.css
+++ b/illustratr/style.css
@@ -2,13 +2,13 @@
 Theme Name: Illustratr
 Theme URI: https://wordpress.com/themes/illustratr/
 Description: A minimalist portfolio theme.
-Version: 1.3.1
+Version: 1.3.2
 Author: Automattic
 Author URI: https://wordpress.com/themes/
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: illustratr
-Tags: blog, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, one-column, photography, portfolio, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
+Tags: blog, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, grid-layout, one-column, photography, portfolio, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
 */
 
 /*--------------------------------------------------------------
@@ -1776,6 +1776,7 @@ Widgets
 	line-height: 1.3;
 	margin: 0 20px;
 	width: 253px;
+	word-wrap: break-word;
 }
 @media screen and (min-width: 768px) and (max-width: 959px) {
 	.widget {
@@ -3650,6 +3651,10 @@ audio,
 .mejs-audio {
 	display: block;
 	margin: 0 auto 20px auto;
+	max-width: 100%;
+}
+
+.issuuembed {
 	max-width: 100%;
 }
 
